# parcival

./: .editorconfig  .syntastic_cpp_config  README.md  meson.build
scripts/: generate-header.sh
src/: choice.hh  expect.hh  fail.hh  function_traits.hh  item.hh  many.hh  numbers.hh  optional.hh  parsing.hh  predicate.hh  reduce.hh  result.hh  sequence.hh  state.hh  tokenize.hh  tuple.hh
test/: meson.build
test/main/: meson.build
test/parsing/: floats.cc  meson.build  numbers.cc  recursion.cc  simple.cc
